--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 Flask==0.10.1
+Flask-Bcrypt==0.5.2
 Jinja2==2.7.1
 MarkupSafe==0.18
 Werkzeug==0.9.4
@@ -6,4 +7,5 @@ argparse==1.2.1
 distribute==0.6.34
 gunicorn==18.0
 itsdangerous==0.23
+py-bcrypt==0.4
 wsgiref==0.1.2
